fix DTO naming
