# docs/swagger.json
@@ -127,7 +127,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateNotificationRequest"
+                            "$ref": "#/definitions/controllers.CreateNotificationDTO"
                         }
                     }
                 ],
@@ -295,11 +295,11 @@
                     },
                     {
                         "description": "Partial update",
-                        "name": "patch",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/notifier.UpdateNotificationRequest"
+                            "$ref": "#/definitions/controllers.UpdateNotificationDTO"
                         }
                     }
                 ],
@@ -437,6 +437,45 @@
                 }
             }
         },
+        "controllers.CreateNotificationDTO": {
+            "type": "object",
+            "properties": {
+                "channel_name": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "meta": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "scheduled_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.UpdateNotificationDTO": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "meta": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "scheduled_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ChannelSchemasResponse": {
             "type": "object",
             "properties": {
@@ -448,38 +487,6 @@
                 },
                 "sms": {
                     "$ref": "#/definitions/channels.ValidSMSMeta"
-                }
-            }
-        },
-        "models.CreateNotificationRequest": {
-            "type": "object",
-            "properties": {
-                "channel_name": {
-                    "type": "string",
-                    "enum": [
-                        "email",
-                        "sms",
-                        "push"
-                    ],
-                    "example": "email"
-                },
-                "content": {
-                    "type": "string",
-                    "example": "Welcome to our platform!"
-                },
-                "meta": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "scheduled_at": {
-                    "type": "string",
-                    "example": "2025-10-27T10:00:00Z"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "Welcome email"
                 }
             }
         },
@@ -544,26 +551,6 @@
                 "token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-                }
-            }
-        },
-        "notifier.UpdateNotificationRequest": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "meta": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "scheduled_at": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         },
